# uuid-wasm

./: Cargo.toml  wasm-size-reduction.sh
rust-parcel/: index.html  js.1003a067.js  uuid_wasm_bg.2a837c67.wasm
rust-parcel/js/: index.js
rust-webpack/: 1.bundle.js  bundle.js  index.html
rust-webpack/js/: index.js
src/: lib.rs
wasm-app/: 0.bootstrap.js  bootstrap.js  index.html  index.js
