[package]
name = "uuid-wasm"
version = "0.1.0"
authors = ["Chiu-Hsiang Hsu <wdv4758h@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
uuid = { version = "0.7", default-features = false, features = ["v4", "wasm-bindgen"] }
wasm-bindgen = "0.2.42"
wee_alloc = "0.4.4"

[profile.release]
lto = true
opt-level = 's'
